fix some bugs (mostly on mobile version)

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -33,7 +33,7 @@ a {
 button {
   display: block;
   padding: 5px 10px;
-  min-width: 100px;
+  /* min-width: 100px; */
   height: 40px;
   border-radius: 10px;
   background-color: #ffffff;
@@ -49,11 +49,27 @@ button:hover {
   border-color: #ffffff;
 }
 
-.go-back-link {
+.header {
   position: fixed;
-  top: 18px;
-  left: 20px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 10px;
+
+  display: flex;
+  gap: 10px;
+  justify-content: space-between;
+  align-items: center;
+
+  background-color: #26724b;
+  box-shadow: 0px 2px 2px rgb(0 0 0 / 12%), 0px 3px 3px rgb(0 0 0 / 6%),
+    0px 4px 4px rgb(0 0 0 / 16%);
+  overflow: hidden;
   z-index: 1000;
+}
+
+.go-back-link {
+  line-height: 1;
   color: #ffffff;
 }
 
@@ -71,27 +87,21 @@ button:hover {
 }
 
 .search-form {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 100;
-  width: 100%;
+  margin: 0;
   display: flex;
+  align-items: center;
   gap: 10px;
-  justify-content: center;
-  background-color: #26724b;
-  padding: 10px;
 
-  box-shadow: 0px 2px 2px rgb(0 0 0 / 12%), 0px 3px 3px rgb(0 0 0 / 6%),
-    0px 4px 4px rgb(0 0 0 / 16%);
+  overflow: hidden;
 }
 
 .search-form input {
   height: 40px;
-  min-width: 180px;
+  min-width: 160px;
+
   border-radius: 10px;
   border: 2px solid #a9a9a9;
-  padding: 10px 20px;
+  padding: 5px 10px;
   font-size: 18px;
   outline: none;
 }
@@ -108,11 +118,6 @@ button:hover {
 
 .search-form input:focus::placeholder {
   color: #ffffff;
-}
-
-.search-form {
-  text-align: center;
-  margin-bottom: 20px;
 }
 
 .gallery {
